--- a/src/styles/slidebar.css
+++ b/src/styles/slidebar.css
@@ -42,6 +42,7 @@
     font-size: 15px;
     margin-left: 16px;
     margin-top: 36px;
+    font-weight: bolder;
 }
 .slidebar-bottom-content-box{
     width: 95%;
@@ -57,6 +58,7 @@
     flex-direction: row;
     align-items: center;
     gap:16px;
+    font-weight: bolder;
 }
 .slidebar-bottom-content-box>div:last-child{
     width: 70px;
@@ -71,7 +73,7 @@
 }
 .slidebar-bottom-content-box>div:last-child>p{
     font-size: 16px;
-    font-weight: bold;
+    font-weight: bolder;
     color: #9B9C9E;
 }
 .slidebar-bottom-content>div:nth-child(3){
@@ -80,9 +82,57 @@
 .slidebar-end-content{
     width: 90%;
     height: calc(100% - 360px);
+    margin: 24px 8px;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.slidebar-end-content>div:nth-child(1)>p{
+    font-size: 16px;
+    justify-content: start;
+    display: flex;
+    color:#686B6E;
+
 }
 .slidebar-end-content>div:nth-child(1){
-    font-size: 10px;
-    justify-content: center;
+    width: 90%;
+    margin-bottom: 10px;
+}
+.slidebar-end-content-list{
     display: flex;
+    align-items: center;
+    width: 100%;
+    height: 50px;
+    margin-top: 10px;
+    padding-left:10px ;
+}
+.slidebar-end-content-list>p{
+    font-size: 16px;
+    margin-left: 16px;
+    font-weight: bolder;
+}
+.slidebar-end-content>div:nth-child(2)>div:nth-child(1){
+    border-radius: 8px;
+    border-top: 1px solid rgba(255, 255, 255, 0.08);
+}
+.slidebar-bottom-content-box2{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.slidebar-end-content>div:nth-child(3){
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    box-sizing: border-box;
+    padding:2px 9px;
+    height: 30px;
+    align-items: center;
+    margin-top: 14px;
+}
+.slidebar-end-content>div:nth-child(3)>p{
+    color: #686B6E;
+    margin-left: 16px;
+    font-weight: normal;
 }
