--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,36 +1,51 @@
 .header{
     width: 100vw;
-    height: 100px;
+    height: 80px;
     border-bottom: 2px solid #F08080;
     display: flex;
     justify-content: center;
+    padding: 19px 100px;
     align-items: center;
+    position: absolute;
+    box-sizing: border-box;
 }
 .header-container{
-    width: 82%;
-    height: 62px;
     display: flex;
-    flex-direction: row;
-    align-items: center;
+    width: 1238px;
     justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
 }
 .header-left-content{
-    color: #F08080;
     display: flex;
-    flex-direction: row;
     align-items: center;
-    gap: 30px;
-    font-weight: bolder;
-}
-.header-left-content>div>button{
-    border: none;
-    background: none;
-    margin-left: 10px;
+    gap: 38px;
 }
 .header-left-content>div{
     display: flex;
     flex-direction: row;
-    align-items: center;
+    gap: 5px;
+    color: #F08080;
+}
+.header-left-content>div>p:nth-child(1){
+    align-self: stretch;
+
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 24px;
+}
+.header-left-content>div>p:nth-child(2){
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 24px; /* 150% */
+}
+.header-left-content>div>p:nth-child(3){
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 24px; /* 150% */
 }
 .header-profile{
     width: 32px;
@@ -39,21 +54,40 @@
     background-color: #F08080;
 
 }
-.header-right-content>button{
-    border: none;
-    background: none;
-    color: #cdd1d4;
+.header-right-content{
     display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 9px;
+}
+.header-right-content>div:nth-child(1){
+    display: flex;
+    height: 40px;
+    padding: 8px 16px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+.header-right-content>div:nth-child(1)>p{
+    font-size: 14px;
+    color: #cdd1d4;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 20px; /* 142.857% */
+    letter-spacing: 0.15px;
+}
+.header-right-content>div:nth-child(2){
+    display: flex;
+    height: 41px;
     align-items: center;
     gap: 17px;
 }
-.header-right-content{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 30px;
-}
-.header-right-content>button>p{
-    font-weight: bolder;
+.header-right-content>div:nth-child(2)>p{
+    color: #CDD1D4;
+    text-align: center;
     font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 24px; /* 150% */
+    letter-spacing: 0.15px;
 }
