--- a/src/styles/ideaboard.css
+++ b/src/styles/ideaboard.css
@@ -158,3 +158,51 @@
 .ideaboard-forth-item3>svg{
     margin-bottom: 20px;
 }
+.profile-modal{
+    position: absolute;
+    z-index: 1;
+    top: 100px;
+    width: 100%;
+    height: calc(100% - 100px);
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.profile-modal-content {
+    border-radius: 16px;
+    border-top: 1px solid rgba(255, 255, 255, 0.08);
+    background: #1A1D21;
+    box-shadow: 16px 24px 64px -24px rgba(255, 255, 255, 0.04) inset, 0px 24px 64px -16px rgba(0, 0, 0, 0.24), 0px 8px 12px 0px rgba(255, 255, 255, 0.04) inset;
+    margin: auto;
+    top: 0px;
+    right: 40px;
+    position: absolute;
+    padding: 40px 40px;
+    width: 800px;
+    height: 60%;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+.profile-modal-first-content{
+    color: white;
+}
+.profile-modal-first-content>h3{
+    margin-bottom: 16px;
+    font-size: 27px;
+}
+.profile-modal-first-content>p{
+    color: #9b9c9e;
+}
