--- a/src/styles/slidebar.css
+++ b/src/styles/slidebar.css
@@ -1,5 +1,5 @@
 .slidebar-container{
-    width: 350px;
+    width: 300px;
     height: 97vh;
     background-color: #0d0f10;
     border-radius: 20px;
@@ -15,22 +15,24 @@
     align-items: center;
     height: 60px;
     border-bottom: 1px solid #131619;
-    padding: 27px;
+    padding: 24px;
+    /*  */
+
 
 }
 .slidebar-top-content>div>h3{
     color: white;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 16px;
 }
 .slidebar-top-content>div>p{
     color: #f08080;
-    font-size: 15px;
+    font-size: 12px;
 }
 .slidebar-bottom-content{
     color: white;
     height: 190px;
-    padding: 27px 10px;
+    padding: 0px 10px;
     width: 90%;
     justify-content: center;
     display: flex;
@@ -39,17 +41,20 @@
 }
 .slidebar-bottom-content>p{
     color: #686B6E;
-    font-size: 15px;
+    font-size: 12px;
     margin-left: 16px;
     margin-top: 36px;
     font-weight: bolder;
 }
 .slidebar-bottom-content-box{
-    width: 95%;
-    height: 60px;
-    margin-top:14%;
     display: flex;
+    width: 296px;
+    height: 48px;
+    padding: 14px 16px;
     align-items: center;
+    gap: 16px;
+    width: 95%;
+    margin-top: 24PX;
     justify-content: space-between;
     padding: 0 10px;
 }
@@ -59,20 +64,25 @@
     align-items: center;
     gap:16px;
     font-weight: bolder;
+    font-size: 12px;
+}
+.slidebar-bottom-content-box>div:first-child>svg{
+    width: 20px;
+    height: 20px;
 }
 .slidebar-bottom-content-box>div:last-child{
-    width: 70px;
+    width: 61px;
     border-radius: 4px;
     border: 1px solid rgba(255, 255, 255, 0.08);
     background: linear-gradient(118deg, rgba(215, 237, 237, 0.16) -47.79%, rgba(204, 235, 235, 0.00) 100%);
     height: 25px;
-    padding: 2px 8px;
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 8px;
 }
 .slidebar-bottom-content-box>div:last-child>p{
-    font-size: 16px;
+    font-size: 12px;
     font-weight: bolder;
     color: #9B9C9E;
 }
@@ -89,7 +99,7 @@
     align-items: center;
 }
 .slidebar-end-content>div:nth-child(1)>p{
-    font-size: 16px;
+    font-size: 12px;
     justify-content: start;
     display: flex;
     color:#686B6E;
@@ -108,10 +118,11 @@
     padding-left:10px ;
 }
 .slidebar-end-content-list>p{
-    font-size: 16px;
+    font-size: 14px;
     margin-left: 16px;
     font-weight: bolder;
 }
+
 .slidebar-end-content>div:nth-child(2)>div:nth-child(1){
     border-radius: 8px;
     border-top: 1px solid rgba(255, 255, 255, 0.08);
@@ -130,6 +141,7 @@
     height: 30px;
     align-items: center;
     margin-top: 14px;
+    font-size: 14px;
 }
 .slidebar-end-content>div:nth-child(3)>p{
     color: #686B6E;
