--- a/src/styles/community.css
+++ b/src/styles/community.css
@@ -51,6 +51,8 @@
     flex-wrap: wrap;
     column-gap: 25px;
     overflow-y: auto;
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+    scrollbar-width: none; /* Firefox */
 }
 
 .card {
