--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -100,3 +100,13 @@
     margin-right: 23px;
     margin-bottom: 23px;
 }
+.option{
+    overflow-y: auto;
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+    scrollbar-width: none; /* Firefox */
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    height: calc(100% - 131px - 88px);
+}
