--- a/src/styles/flownode.module.scss
+++ b/src/styles/flownode.module.scss
@@ -14,6 +14,43 @@
   box-shadow: 0 0 0 4px rgba(240, 128, 128, 0.24);
 }
 
+.memoNode {
+  display: flex;
+  padding: 10px;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow-wrap: break-word;
+  margin: 16px;
+  width: 145px;
+  height: 145px;
+  background: #f08080;
+  border: 1px #000000;
+  border-radius: 5px;
+}
+
+.memoText {
+  color: #000;
+  font-family: "Plus Jakarta Sans", sans-serif;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 150%; /* 18px */
+  font-size: 12px;
+
+}
+
+.memoTextAuthor {
+  color: #4C4F51;
+  font-family: "Plus Jakarta Sans", sans-serif;
+  font-size: 8px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px; /* 250% */
+  letter-spacing: 0.15px;
+}
+
+
+
 .ItemText {
   color: #CDCECF;
   text-align: center;
