메인페이지 작업

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -4,8 +4,6 @@
 }
 
 .home {
-    width: 100vw;
-    height: 100vh;
     background-color: #131619;
     padding: 15px;
     display: flex;
@@ -14,89 +12,268 @@
 }
 
 .home-container {
-    width: 76vw;
-    height: 97vh;
-    margin-left: 20px;
-}
-
-.community-board {
     display: flex;
-    align-items: flex-end;
-    gap: 12px;
-    align-self: stretch;
-}
-
-.community-board > svg {
-    width: 33px;
-    height: 33px;
-}
-
-.community-board > div {
-    display: flex;
-    width: 524px;
-    padding: 24px;
+    width: 783px;
+    height: 100vh;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 24px;
-    border-radius: 12px;
-    border-top: 1px solid var(--Glass-Stroke, rgba(255, 255, 255, 0.08));
-    background: #000;
+    align-items: flex-start;
+    margin-left: 176px;
+    margin-top: 68px;
 }
 
-.community-board > div > div {
-    color: var(--Noble-Black-0, #FFF);
-    text-align: center;
+.MyIdea {
+    margin-bottom: 26px;
+}
+
+.MyIdea > p{
+    color: #F08080;
+    font-family: "Plus Jakarta Sans";
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 24px;
+    padding: 10px;
+}
+
+.descripe {
+    display: flex;
+    height: 191px;
+    padding: 12px 17px;
+    align-items: flex-start;
+    gap: 10px;
+    align-self: stretch;
+    border-radius: 15px;
+    border: 1px solid var(--, #F08080);
+    background: #1A1D21;
+    box-shadow: 0px 4px 4px 0px #F08080;
+    margin-bottom: 26px;
+    justify-content: space-between;
+    flex-wrap: wrap; /* 추가 */
+    align-content: space-between; /* 활성화 */
+}
+
+
+.descripe > p{
+    color: #686B6E;
     font-family: "Plus Jakarta Sans";
     font-size: 16px;
     font-style: normal;
-    font-weight: 600;
+    font-weight: 700;
     line-height: 24px;
-    letter-spacing: 0.15px;
 }
 
-.detail {
-    display: flex;
-    align-items: center;
-    gap: 11px;
-    padding: 30px 0px;
-}
-
-.detail > div {
-    display: flex;
-    width: 111px;
-    padding: 4px 8px;
-    justify-content: center;
-    align-items: center;
-    gap: 8px;
-    border-radius: 4px;
-    border: 1px solid var(--Glass-Stroke, rgba(255, 255, 255, 0.08));
-    background: var(--Glass-Fill, linear-gradient(118deg, rgba(215, 237, 237, 0.16) -47.79%, rgba(204, 235, 235, 0.00) 100%));
-    box-shadow: 0px 1px 2px -1px rgba(0, 0, 0, 0.05), 0px 1px 3px 0px rgba(0, 0, 0, 0.05);
-}
-
-.detail > div > p {
-    color: var(--Noble-Black-300, #9B9C9E);
+.descripe > div {
+    width: 52px;
+    color: #1A1D21;
     text-align: center;
-    font-family: Inter;
+    font-family: "Plus Jakarta Sans";
     font-size: 12px;
     font-style: normal;
-    font-weight: 600;
-    line-height: 18px;
-    letter-spacing: 0.15px;
+    font-weight: 700;
+    line-height: 24px;
 }
 
-.option-card {
+.descripe > button {
+    display: flex;
+    height: 24px;
+    padding: 0px 12px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    align-self: stretch;
+    border-radius: 5px;
+    border: 1px solid #F08080;
+    background:#F08080;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.descripe > button > p {
+    color: #1A1D21;
+    text-align: center;
+    font-family: "Plus Jakarta Sans";
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 24px;
+}
+
+.example {
+    display: flex;
+    height: 109px;
+    flex-direction: column;
+    align-self: stretch;
+    border-radius: 15px;
+    background: #1A1D21;
+    margin-bottom: 26px;
+}
+
+.example > div:nth-child(1) > p{
+    padding: 10px;
+    color: #D9D9D9;
+    font-family: "Plus Jakarta Sans";
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 24px;
+}
+
+.example > div:nth-child(2) {
     display: inline-flex;
-    width: 336px;
-    height: 162px;
+    width: 755px;
+    justify-content: center;
+    text-align: center;
+}
+
+.example > div:nth-child(2) > div:nth-child(1), .example > div:nth-child(2) > div:nth-child(2), .example > div:nth-child(2) > div:nth-child(3) {
+    justify-content: center; 
+    display: flex;
+    width: 10%;
+    height: 35px;
+    padding: 9px 85px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    border: 1px solid #F08080;
+    background: #1A1D21;
+    margin: 5px;
+    color: white;
+}
+
+.example > div:nth-child(2) > div:nth-child(4){
+    display: flex;
+    width: 16px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 24px;
-    border-radius: 12px;
-    background: #000;
-    padding: 15px;
-    margin-right: 23px;
-    margin-bottom: 23px;
+    gap: 10px;
+}
+
+.example > div:nth-child(2) > svg:nth-child(1) {
+    width: 12px;
+    height: 12px;
+    stroke-width: 2px;
+    stroke: var(--, #F08080);
+}
+
+.example > div:nth-child(2) > svg:nth-child(2) {
+    width: 16px;
+    height: 15.999px;
+    fill: var(--, #F08080);
+}
+
+.alarm {
+    display: flex;
+    height: 77px;
+    padding: 14px 21px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+    align-self: stretch;
+    border-radius: 15px;
+    background: linear-gradient(170deg, rgba(26, 29, 33, 0.00) 1.18%, rgba(239, 128, 128, 0.15) 93.12%);
+    margin-bottom: 26px;
+}
+
+.alarm > div {
+    display: flex;
+    align-items: flex-start;
+    gap: 11px;
+    padding: 21px;
+}
+
+.alarm > div > div:nth-child(1) {
+    display: flex;
+    width: 51px;
+    height: 24px;
+    padding: 0px 12px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 5px;
+    border: 1px solid #F08080;
+    background: #F08080;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.alarm > div > div:nth-child(1) > p {
+    color: #1A1D21 !important;
+    font-family: "Plus Jakarta Sans";
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 24px; /* 171.429% */
+}
+
+.alarm > div > div:nth-child(1) > p{
+    color: #1A1D21;
+    font-family: "Plus Jakarta Sans";
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 24px; /* 171.429% */
+}
+
+.alarm > div > div > p:nth-child(1) {
+    align-self: stretch;
+    color: #FFF;
+    font-family: "Plus Jakarta Sans";
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 24px;
+}
+
+.alarm > div > div > p:nth-child(2) {
+    align-self: stretch;
+    color: #D9D9D9;
+    font-family: "Plus Jakarta Sans";
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 24px; /* 200% */
+}
+
+.recent {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 7px;
+    align-self: stretch;
+}
+
+.recent > div:nth-child(1) {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 7px;
+}
+
+.recent > div:nth-child(1) > svg {
+    display: inline-flex;
+    width: 24px;
+    height: 24px;
+    margin-right: 4px;
+}
+
+.recent > div:nth-child(1) > p {
+    display: inline-flex;
+    color: #D9D9D9;
+    font-family: "Plus Jakarta Sans";
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 24px;
+}
+
+.recent > div:nth-child(2) {
+    display: inline-flex;
+    gap: 14px;
+}
+
+.recent > div:nth-child(2) > div {
+    display: inline;
+    width: 248px;
+    height: 148px;
+    border-radius: 10px;
+    border: 1px solid #F08080;
+    background: #131619;
 }
