--- a/src/styles/flownode.module.scss
+++ b/src/styles/flownode.module.scss
@@ -48,9 +48,20 @@
 }
 
 .resultNodeImageContainer {
-  display: inline-flex;
+  display: flex;
   align-items: center;
-  gap: 11px;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  font-size: 0;
+
+  img {
+    margin: 0;
+    padding: 0;
+    object-fit: cover;
+    height: 112px;
+    display: block;
+  }
 }
 
 .resultDefaultNode {
